# second-brain

./: .gitignore  README.md  justfile
SecondBrainUI/SecondBrainUI/: AppDelegate.swift  ContentView.swift  SecondBrainUIApp.swift
SecondBrainUI/SecondBrainUI.xcodeproj/: project.pbxproj
SecondBrainUI/SecondBrainUITests/: SecondBrainUITests.swift
SecondBrainUI/SecondBrainUIUITests/: SecondBrainUIUITests.swift  SecondBrainUIUITestsLaunchTests.swift
SecondBrainUI/Sources/IPC/: DaemonClient.swift  Messages.swift
SecondBrainUI/Sources/Views/: PopoverView.swift
daemon/: Cargo.toml
daemon/resources/: com.secondbrain.daemon.plist
daemon/src/: config.rs  main.rs
daemon/src/events/: mod.rs
daemon/src/hotkey/: keys.rs  listener.rs  mod.rs
daemon/src/ipc/: mod.rs  protocol.rs  server.rs
daemon/src/lifecycle/: mod.rs  shutdown.rs
daemon/src/state/: machine.rs  mod.rs
docs/: phase-1.md
scripts/: install-daemon.sh  uninstall-daemon.sh
shared/: protocol.json
