[package]
name = "second-brain-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for second-brain voice assistant"
authors = ["swarn"]
license = "AGPL-3.0"

[[bin]]
name = "second-brain-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# macOS system APIs (for future hotkey integration)
# core-foundation = "0.9"

[dev-dependencies]
tokio-test = "0.4"
